@@ -5,6 +5,7 @@ Version 0.2.2 [2005-xxx-xxx] - Jesper Veggerby <pear.nosey@veggerby.dk>
     * Added 'border' and 'cssclass' option to Image_Canvas_GD::toHtml()
     * Added image support when using SVG (using embedded base64 encoding)
     * Added link ("imagemap") support with SVG
+    * Made image loading in GD canvas use getimagesize() to determine type instead of relying on extension
     * Fixed bug where 'htmltags' were not transferred to image mapping of polygon vertices
     * Fixed bug in SVG where pie slices with some specific angles curled the wrong way
     * Fixed bug in Image_Canvas_ImageMap::show() and Image_Canvas_ImageMap::save() calling non-existing method _toHtml()
